--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -699,17 +699,23 @@ body {
 /*-----------------------------------*\
   #VIDEO
 \*-----------------------------------*/
+.video-player{
+  width: 100%;
+  height: 100%;
+  
+}
 
-.video {
+/* .video {
   padding-block: 0;
   margin-block-end: -250px;
+  width: 100%;
+  height: 100%;
 }
 
 .video-card {
-  background-color: var(--light-gray);
-  background-size: cover;
+  background-color: var(--white);
   background-position: center;
-  height: 500px;
+  height: auto;
   border-radius: var(--radius-10);
   display: flex;
   flex-direction: column;
@@ -743,14 +749,18 @@ body {
   animation: pulse 2s ease infinite;
 }
 
-@keyframes pulse {
+.hidden {
+    display: none;
+} */
+
+/* @keyframes pulse {
   0% {
     box-shadow: 0 0 0 0 var(--coquelicot);
   }
   100% {
     box-shadow: 0 0 0 40px transparent;
   }
-}
+} */
 
 /*-----------------------------------*\
   #CLASS
