--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -702,75 +702,31 @@ body {
 /*-----------------------------------*\
   #VIDEO
 \*-----------------------------------*/
+
+.video {
+  padding-block-start: calc(var(--section-padding));
+
+  & h2 {
+    color: var(--coquelicot)
+  }
+  
+}
 .video-player{
   width: 100%;
   height: 100%;
-  
 }
-
-/* .video {
-  padding-block: 0;
-  margin-block-end: -250px;
-  width: 100%;
-  height: 100%;
-}
-
-.video-card {
-  background-color: var(--white);
-  background-position: center;
-  height: auto;
-  border-radius: var(--radius-10);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.video-card::before {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: var(--rich-black-fogra-29_50);
-  z-index: -1;
-}
-
-.video-card .card-title {
-  color: var(--white);
-  font-size: var(--fs-3);
-}
-
-.play-btn {
-  background-color: var(--coquelicot);
-  color: var(--white);
-  width: max-content;
-  font-size: 30px;
-  padding: 25px;
-  border-radius: 50%;
-  margin-block: 25px 35px;
-  animation: pulse 2s ease infinite;
-}
-
-.hidden {
-    display: none;
-} */
-
-/* @keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--coquelicot);
-  }
-  100% {
-    box-shadow: 0 0 0 40px transparent;
-  }
-} */
 
 /*-----------------------------------*\
-  #CLASS
+  #Treatments
 \*-----------------------------------*/
 
 .class {
-  padding-block-start: calc(var(--section-padding) + 250px);
+  padding-block-start: calc(var(--section-padding));
+
+  & p {
+    color: var(--white);
+    margin-bottom: 2rem;
+  }
 }
 
 .class .section-subtitle {
@@ -778,7 +734,8 @@ body {
 }
 
 .class .section-title {
-  color: var(--white);
+  color: var(--coquelicot);
+
 }
 
 .class-card {
@@ -855,6 +812,11 @@ body {
 .blog .section-subtitle {
   margin-inline: auto;
 }
+
+.blog .container h2 {
+  color: var(--coquelicot);
+}
+
 
 .blog-card {
   background-color: var(--white);
