--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -739,6 +739,10 @@ body {
     font-size: var(--fs-6);
     font-weight: var(--fw-800);
   }
+
+  & a:hover {
+    color: var(--coquelicot);
+  }
 }
 
 .class .section-subtitle {
