--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -731,13 +731,18 @@ body {
   & p {
     color: var(--white);
     margin-bottom: 2rem;
-    font-size: var(--fs-5);
+    font-size: var(--fs-4);
+  }
+
+  & .readMore {
+    color: var(--rich-black-fogra-29-2); 
   }
 
    & .card-price {
     color: var(--coquelicot);
     font-size: var(--fs-6);
     font-weight: var(--fw-800);
+    text-align: center;
   }
 
   & a:hover {
@@ -774,13 +779,6 @@ body {
 
 }
 
-.card-content .title-wrapper{
-  display: flex;
-  align-items: center;
-
-  
-}
-
 .class-card .title-wrapper {
   display: flex;
   align-items: center;
@@ -802,8 +800,9 @@ body {
 }
 
 .class-card .card-text {
-  color: var(--sonic-silver);
+  color: var(--rich-black-fogra-29-2);
   font-size: var(--fs-6);
+  font-weight: var(--fw-500);
   margin-block: 16px 12px;
 }
 
@@ -822,8 +821,8 @@ body {
   }
 
   & a {
-    font-size: 14px;
-    padding: 5px;  
+    font-size: 15px;
+    padding: 5px; 
   }
 }
 
