--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,6 +572,10 @@ body {
   position: relative;
 }
 
+.hero-banner .contact-img {
+  border-radius: 50%;
+}
+
 .abs-img-1 {
   top: 20px;
   right: -50px;
@@ -612,6 +616,8 @@ body {
 
 .about {
   overflow: hidden;
+  background-color: #513424 ;
+  
 }
 
 .about-banner {
@@ -633,6 +639,23 @@ body {
   left: 0;
   z-index: -1;
   animation: moveUp 2.5s ease infinite;
+}
+
+.about-content {
+  padding-inline: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+   & h2 {
+    color: var(--coquelicot);
+   }
+
+   & img {
+    width: 100%;
+    height: 100%;
+   }
+
 }
 
 @keyframes moveUp {
@@ -672,8 +695,7 @@ body {
   overflow: hidden;
   border-radius: 50%;
   width: 100px;
-  height: 100px;
-  
+  height: 100px;  
 }
 
 .about .coach-name {
