--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,7 +582,7 @@ body {
 }
 
 .hero-banner .contact-img {
-  border-radius: 50%;
+  width: 100%;
   margin-bottom: 4rem;
 }
 
@@ -1136,8 +1136,11 @@ body {
  */
  @media (min-width: 320px) {
   .hero-banner .contact-img {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
+  }
+  .hero-content iframe {
+    width: 90%; 
   }
  }
 @media (min-width: 575px) {
