--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--rich-black-fogra-29-1);
+  background-color: #280E09;
 }
 
 /*-----------------------------------*\
@@ -279,6 +279,10 @@ body {
   width: 100%;
 }
 
+.red {
+  color: red;
+}
+
 .circle,
 .abs-img {
   position: absolute;
@@ -315,9 +319,9 @@ body {
 }
 
 .section-subtitle {
-  background-color: var(--coquelicot_10);
-  color: var(--coquelicot);
-  padding: 8px 20px;
+  background-color: var(--coquelicot);
+  color: var(--white);
+  padding: 15px;
   border-radius: var(--radius-8);
 }
 
@@ -421,7 +425,7 @@ body {
 }
 
 .logo {
-  color: var(--rich-black-fogra-29-1);
+  color: var(--white);
   font-family: var(--ff-catamaran);
   font-size: var(--fs-3);
   font-weight: var(--fw-900);
@@ -434,11 +438,11 @@ body {
   }
 
   & span:hover {
-    color: var(--coquelicot);
+    color: var(--orange);
     background-color: var(--white);
     border-radius: var(--radius-8);
     transition: all 0.3ms linear;
-  }
+  } 
 }
 
 .logo ion-icon {
@@ -495,7 +499,7 @@ body {
   position: absolute;
   top: 10px;
   right: 15px;
-  background-color: var(--rich-black-fogra-29-1);
+  background-color: var(--orange);
   color: var(--white);
   font-size: 40px;
   padding: 10px;
@@ -812,6 +816,7 @@ body {
   border-radius: var(--radius-10);
   height: 100%;
   overflow: hidden;
+  border: 1px solid var(--light-gray);
 }
 
 .class-card .card-banner img {
