--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -768,6 +768,8 @@ body {
   height: 100%;
 }
 
+
+
 /*-----------------------------------*\
   #Treatments
 \*-----------------------------------*/
@@ -853,7 +855,7 @@ body {
 }
 
 .class-card .card-text {
-  color: var(--rich-black-fogra-29-2);
+  color: var(--rich-black-fogra-29-1);
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
   margin-block: 16px 12px;
@@ -867,6 +869,7 @@ body {
   color: var(--rich-black-fogra-29-1);
   font-size: var(--fs-6);
   font-weight: var(--fw-800);
+  
   
   & img {
     width: 50px;
@@ -882,12 +885,14 @@ body {
 .class-card .progress-bg {
   background-color: var(--coquelicot_10);
   border-radius: 50px;
+  
 }
 
 .class-card .progress-bar {
   background-color: var(--coquelicot);
   height: 10px;
   border-radius: inherit;
+  
 }
 
 /*-----------------------------------*\
@@ -908,7 +913,7 @@ body {
 
 .blog .section-subtitle {
   margin-inline: auto;
-  
+  margin-top: 2rem;
 }
 
 .blog .container h2 {
@@ -922,6 +927,10 @@ body {
   border-radius: var(--radius-10);
   height: 100%;
   overflow: hidden;
+
+  & h3 {
+    color: var(--coquelicot);
+  }
 }
 
 .blog-card .card-banner {
@@ -963,6 +972,7 @@ body {
 .blog-card .card-text {
   font-size: var(--fs-6);
   margin-block: 8px 12px;
+  color: var(--rich-black-fogra-29-1);
 }
 
 .blog-card .btn-link {
@@ -971,6 +981,13 @@ body {
 
 .blog-card .btn-link:is(:hover, :focus) {
   --color: var(--rich-black-fogra-29-1);
+}
+
+.blog-card video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  align-items: center;
 }
 
 /*-----------------------------------*\
