--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -751,6 +751,12 @@ body {
   font-weight: var(--fw-500);
 }
 
+.about .container img {
+  
+  width: 100%;
+  height: 100%;
+}
+
 /*-----------------------------------*\
   #VIDEO
 \*-----------------------------------*/
