--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,9 @@
    * colors
    */
 
-  --rich-black-fogra-29_50: hsl(210, 26%, 11%, 0.5);
-  --rich-black-fogra-29-1: hsl(210, 26%, 11%);
-  --rich-black-fogra-29-2: hsl(210, 50%, 4%);
+  --rich-black-fogra-29_50: #000000;
+  --rich-black-fogra-29-1: #000000;
+  --rich-black-fogra-29-2: #000000;
   --silver-metallic: hsl(212, 9%, 67%);
   --coquelicot_20: #f26ca7;
   --coquelicot_10: #c91568;
@@ -21,7 +21,7 @@
   --white_20: hsl(0, 0%, 100%, 0.2);
   --white_10: hsl(0, 0%, 100%, 0.1);
   --black_10: hsl(0, 0%, 0%, 0.1);
-  --white: hsl(0, 0%, 100%);
+  --white: #ffffff;
   --orange: hsl(4, 90%, 58%);
 
   /**
