--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ body {
   color: var(--pink);
   font-size: 1.6rem;
   line-height: 1.6;
+  border: 1px solid var(--pink);
 }
 
 :focus-visible {
@@ -518,13 +519,11 @@ body {
 \*-----------------------------------*/
 
 .hero {
-  color: var(--cadet-gray);
   text-align: center;
   padding-block-start: calc(var(--section-padding) + 80px);
   padding-block-end: 0;
   overflow: hidden;
   margin-top: 0;
-  border: solid 1px var(--coquelicot);
 }
 
 .hero::after {
@@ -532,7 +531,6 @@ body {
   left: 0;
   width: 100%;
   height: 240px;
-  background-color: var(--rich-black-fogra-29-1);
   z-index: -1;
 }
 
@@ -545,19 +543,19 @@ body {
 }
 
 .hero-subtitle {
-  background-color: var(--white_10);
-  color: var(--coquelicot);
+  color: var(--pink);
   margin-inline: auto;
   padding: 5px;
   padding-inline-end: 15px;
   border-radius: var(--radius-8);
   margin-bottom: 1rem;
+  border: 1px solid var(--pink);
 }
 
 .hero-subtitle .strong {
   display: inline-block;
-  background-color: var(--rich-black-fogra-29-1);
-  color: var(--coquelicot);
+  background-color: var(--pink);
+  color: var(--black);
   padding: 2px 15px;
   margin-inline-end: 15px;
   border-radius: var(--radius-5);
@@ -592,14 +590,14 @@ body {
   top: 20px;
   right: -50px;
   width: 190px;
-  color: var(--white);
+  color: var(--pink);
 }
 
 .abs-img-2 {
   bottom: -50px;
   left: -40px;
   width: 280px;
-  color: var(--coquelicot);
+  color: var(--pink);
 }
 
 .hero .abs-img {
@@ -632,6 +630,7 @@ body {
 
 .about-banner {
   margin-block-end: 50px;
+  
 }
 
 .about-banner::after {
@@ -639,7 +638,6 @@ body {
   left: 0;
   width: 100%;
   height: 50%;
-  background-color: var(--coquelicot);
   border-radius: var(--radius-10);
   z-index: -2;
 }
@@ -658,7 +656,10 @@ body {
   justify-content: center;
   align-items: center;
    & h2 {
-    color: var(--coquelicot);
+    color: var(--pink);
+    border: 1px solid var(--pink);
+    border-radius: var(--radius-10);
+    padding: 4px;
    }
 
    & img {
@@ -711,7 +712,7 @@ body {
 .about .coach-name {
   font-weight: var(--fw-700);
   margin-block-end: 1px;
-  color: var(--coquelicot);
+  color: var(--pink);
   font-size: var(--fs-4);
 }
 
@@ -720,7 +721,7 @@ body {
 }
 
 .about .btn-primary:is(:hover, :focus) {
-  background-color: var(--rich-black-fogra-29-1);
+  background-color: var(--black);
   color: var(--white);
   box-shadow: none;
 }
@@ -746,7 +747,8 @@ body {
   padding-block-start: calc(var(--section-padding));
 
   & h2 {
-    color: var(--coquelicot)
+    color: var(--pink);
+    border: 1px solid var(--pink);
   }
   
 }
@@ -765,7 +767,7 @@ body {
   padding-block-start: calc(var(--section-padding));
   
   & h3 {
-    color: var(--coquelicot);
+    color: var(--pink);
     margin: 0 auto;
   }
 
@@ -776,18 +778,18 @@ body {
   }
 
   & .readMore {
-    color: var(--rich-black-fogra-29-2); 
+    color: var(--pink); 
   }
 
    & .card-price {
-    color: var(--coquelicot);
+    color: var(--pink);
     font-size: var(--fs-6);
     font-weight: var(--fw-800);
     text-align: center;
   }
 
   & a:hover {
-    color: var(--coquelicot);
+    color: var(--white);
   }
 }
 
@@ -796,16 +798,16 @@ body {
 }
 
 .class .section-title {
-  color: var(--coquelicot);
+  color: var(--pink);
 
 }
 
 .class-card {
-  background-color: var(--white);
+  background-color: var(--black);
   border-radius: var(--radius-10);
   height: 100%;
   overflow: hidden;
-  border: 1px solid var(--light-gray);
+  border: 1px solid var(--pink);
 }
 
 .class-card .card-banner img {
@@ -818,7 +820,6 @@ body {
 
 .class-card .card-content {
   padding: 24px;
-
 }
 
 .class-card .title-wrapper {
@@ -830,7 +831,7 @@ body {
   padding-inline-end: 20px;
   margin-inline-end: 20px;
   min-width: max-content;
-  border-inline-end: 1px solid var(--gainsboro);
+  border-inline-end: 1px solid var(--pink);
 }
 
 .class-card .card-title {
@@ -838,11 +839,11 @@ body {
 }
 
 .class-card .card-title:is(:hover, :focus) {
-  color: var(--coquelicot);
+  color: var(--pink);
 }
 
 .class-card .card-text {
-  color: var(--rich-black-fogra-29-1);
+  color: var(--white);
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
   margin-block: 16px 12px;
@@ -870,24 +871,10 @@ body {
   }
 }
 
-.class-card .progress-bg {
-  background-color: var(--coquelicot_10);
-  border-radius: 50px;
-  
-}
-
-.class-card .progress-bar {
-  background-color: var(--coquelicot);
-  height: 10px;
-  border-radius: inherit;
-  
-}
-
-/*-----------------------------------*\
+/*-----------------------------------*\ */
   #BLOG
-\*-----------------------------------*/
+/*-----------------------------------*\ */
 .blog-feed {
-  background-color: var(--coquelicot);
   color: var(--white);
   padding-block: 15px;
   text-align: center;
@@ -905,13 +892,13 @@ body {
 }
 
 .blog .container h2 {
-  color: var(--coquelicot);
+  color: var(--pink);
 }
 
 
 .blog-card {
-  background-color: var(--white);
-  border: 1px solid var(--light-gray);
+  background-color: var(--black);
+  border: 1px solid var(--pink);
   border-radius: var(--radius-10);
   height: 100%;
   overflow: hidden;
@@ -924,6 +911,7 @@ body {
 
 .blog-card .card-banner img {
   transition: var(--transition-2);
+  
 }
 
 .blog-card:is(:hover, :focus) .card-banner img {
@@ -931,8 +919,8 @@ body {
 }
 
 .blog-card .card-meta {
-  background-color: var(--rich-black-fogra-29-1);
-  color: var(--coquelicot);
+  background-color: var(--black);
+  color: var(--pink);
   position: absolute;
   bottom: 0;
   left: 0;
@@ -940,6 +928,8 @@ body {
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
   text-transform: uppercase;
+  border-top-right-radius: var(--radius-10);
+  border: 1px solid var(--pink);
 }
 
 .blog-card .card-content {
@@ -951,21 +941,22 @@ body {
 }
 
 .blog-card .card-title:is(:hover, :focus) {
-  color: var(--coquelicot);
+  color: var(--pink);
 }
 
 .blog-card .card-text {
   font-size: var(--fs-6);
   margin-block: 8px 12px;
-  color: var(--rich-black-fogra-29-1);
+  color: var(--white);
+  font-weight: var(--fw-500);
 }
 
 .blog-card .btn-link {
-  --color: var(--rich-black-fogra-29-1);
+  --color: var(--pink);
 }
 
 .blog-card .btn-link:is(:hover, :focus) {
-  --color: var(--coquelicot);
+  --color: var(--white);
 }
 
 .blog-card video {
@@ -1023,7 +1014,7 @@ body {
   bottom: 0;
   width: 70px;
   height: 1px;
-  background-color: var(--coquelicot);
+  background-color: var(--pink);
 }
 
 .footer-list > li:not(:first-child) {
@@ -1035,7 +1026,8 @@ body {
 }
 
 .footer-link:not(.address):is(:hover, :focus) {
-  color: var(--coquelicot);
+  color: var(--white);
+  
 }
 
 .footer-list-item {
@@ -1046,21 +1038,27 @@ body {
 }
 
 .footer-list-item .icon {
-  background-color: var(--coquelicot);
-  color: var(--white);
+  background-color: var(--pink);
+  color: var(--black);
   font-size: 24px;
   padding: 8px;
   border-radius: 50px;
 }
 
-.footer-form {
+.footer-list-item .icon:hover {
+  background-color: var(--black);
+  color: var(--pink);
+  box-shadow: var(--shadow-2);
+}
+
+/* .footer-form {
   position: relative;
   margin-block-end: 30px;
 }
 
 .footer-form .input-field {
   background-color: var(--white);
-  color: var(--rich-black-fogra-29-1);
+  color: var(--black);
   padding-block: 18px;
   padding-inline: 30px 80px;
   border-radius: var(--radius-10);
@@ -1077,30 +1075,31 @@ body {
 }
 
 .footer-form .btn-primary:is(:hover, :focus) {
-  background-color: var(--rich-black-fogra-29-1);
-  color: var(--white);
-  box-shadow: none;
-}
+  background-color: var(--pink);
+  color: var(--white);  
+} */
 
 .social-list {
   display: flex;
   gap: 15px;
+  font-size: 24px;
 }
 
 .social-link {
-  background-color: var(--white_20);
-  color: var(--white);
+  background-color: var(--pink);
+  color: var(--black);
   padding: 13px;
   border-radius: 50%;
   transition: var(--transition-1);
 }
 
 .social-link:is(:hover, :focus) {
-  background-color: var(--coquelicot);
+  box-shadow: var(--shadow-2);
+  background-color: var(--black);
+  color: var(--pink);
 }
 
 .footer-bottom {
-  background-color: var(--rich-black-fogra-29-2);
   color: var(--white);
   text-align: center;
   padding-block: 15px;
@@ -1108,7 +1107,16 @@ body {
 
 .copyright-link {
   display: inline-block;
-  color: var(--coquelicot);
+  color: var(--pink);
+  border: 1px solid var(--pink);
+  padding: 5px 15px;
+  border-radius: var(--radius-8);
+}
+
+.copyright-link:hover {
+  color: var(--black);
+  background-color: var(--pink);
+  box-shadow: var(--shadow-2);
 }
 
 .footer-bottom-list {
@@ -1118,9 +1126,10 @@ body {
   margin-block-start: 10px;
 }
 
-.footer-bottom-link {
+/* .footer-bottom-link {
   padding-inline-start: 20px;
   transition: var(--transition-1);
+  box-shadow: var(--shadow-2);
 }
 
 .footer-bottom-link::before {
@@ -1129,13 +1138,13 @@ body {
   left: 0;
   width: 10px;
   height: 10px;
-  background-color: var(--coquelicot);
   border-radius: 50%;
 }
 
 .footer-bottom-link:is(:hover, :focus) {
-  color: var(--coquelicot);
-}
+  background-color: var(--pink);
+  color: var(--black);
+} */
 
 /*-----------------------------------*\
   #BACK TO TOP
@@ -1145,12 +1154,11 @@ body {
   position: fixed;
   bottom: 20px;
   right: 40px;
-  background-color: var(--coquelicot);
-  color: var(--rich-black-fogra-29-1);
+  background-color: var(--pink);
+  color: var(--black);
   font-size: 20px;
   padding: 11px;
   border-radius: 50%;
-  border: 2px solid var(--rich-black-fogra-29-1);
   visibility: hidden;
   opacity: 0;
   transition: var(--transition-1);
