--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,13 +752,22 @@ body {
 
   & h2 {
     color: var(--pink);
-    border: 1px solid var(--pink);
+    
+  
   }
   
 }
 .video-player{
   width: 100%;
   height: 100%;
+  & p {
+    border: 1px solid var(--pink);
+    border-radius: var(--radius-10);
+    padding: 4px;
+    color: var(--white);
+    font-size: var(--fs-4);
+    margin: 0 190px;
+  }
 }
 
 
@@ -1194,6 +1203,12 @@ body {
   .hero-content iframe {
     width: 90%; 
   }
+  .video-player p {
+    margin: 0;
+  }
+  iframe {
+    width: 100%;
+  }
  }
 @media (min-width: 575px) {
   /*** CUSTOM PROPERTY */
@@ -1277,6 +1292,10 @@ body {
   .video-card .card-title {
     --fs-3: 3.5rem;
   }
+ .video-player p {
+    margin: 0;
+  }
+  
 
   /*** FOOTER */
 
@@ -1323,6 +1342,10 @@ body {
   .abs-img-1 {
     top: 140px;
     right: 50px;
+  }
+
+  .video-player p {
+    margin: 0 60px;
   }
 
   /*** FOOTER */
