--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1132,15 +1132,19 @@ body {
   position: fixed;
   bottom: 20px;
   right: 40px;
-  background-color: var(--pink);
-  color: var(--black);
-  font-size: 20px;
-  padding: 11px;
+  border: 3px solid var(--pink);
+  color: var(--pink);
+  font-size: 13px;
+  padding: 4px;
   border-radius: 50%;
   visibility: hidden;
   opacity: 0;
   transition: var(--transition-1);
   z-index: 4;
+
+  & ion-icon {
+    font-size: 20px;
+  }
 }
 
 .back-top-btn.active {
