--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1172,6 +1172,11 @@ body {
     width: 90%; 
   }
 
+  .hero .img {
+    width: 80%;
+    margin: 0 auto;
+  }
+
  }
 @media (min-width: 575px) {
   /*** CUSTOM PROPERTY */
@@ -1208,8 +1213,14 @@ body {
 
   /*** HERO */
 
+  .hero .img {
+    width: 60%;
+    margin: 0 auto;
+  }
+
   .hero-content {
     padding-inline: 40px;
+
   }
 
   .hero-subtitle .strong {
@@ -1293,6 +1304,11 @@ body {
   }
 
   /*** HERO */
+
+  .hero .img {
+    width: 50%;
+    margin: 0 auto;
+  }
 
   .hero-banner {
     max-width: max-content;
