updated google fonts link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,6 @@
   #CUSTOM PROPERTY
 \*-----------------------------------*/
 
-@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-
 
 :root {
   /*** colors*/
@@ -1114,9 +1112,10 @@ body {
 .social-link {
   background-color: var(--orange);
   color: var(--black);
-  padding: 13px;
+  padding: 8px;
   border-radius: 50%;
   transition: var(--transition-1);
+  font-size: 24px;
 }
 
 .social-link:is(:hover, :focus) {
