--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -605,8 +605,8 @@ body {
 }
 
 .abs-img-2 {
-  bottom: -50px;
-  left: -40px;
+  top: 180px;
+  left: -100px;
   width: 280px;
   color: var(--pink);
 }
@@ -740,10 +740,8 @@ body {
 .about .container-img {
   display: flex;
   gap: 20px;
-  width: 100%;
-  height: 100%;
   justify-content: center;
-  margin-top: 2rem;
+  align-items: center;
 }
 
 /*-----------------------------------*\
@@ -1222,7 +1220,7 @@ body {
   }
 
   .about .coach-avatar {
-    width: 70px;
+    width: 60px;
   }
 
  }
@@ -1291,19 +1289,13 @@ body {
     margin: 0 auto;
   }
 
-  .abs-img-1 {
-    top: 130px;
-    right: -10px;
-    width: 230px;
-  }
-
-  .abs-img-2 {
-    bottom: 20px;
-    left: -40px;
-    width: 310px;
-  }
+  
 
   /*** ABOUT */
+
+  .about .coach-avatar {
+    width: 80px;
+  }
 
   .about .wrapper {
     display: flex;
@@ -1385,10 +1377,6 @@ body {
   text-align: justify;  
   }
 
-  .abs-img-1 {
-    top: 140px;
-    right: 50px;
-  }
 
   /*** FOOTER */
 
@@ -1558,6 +1546,14 @@ body {
 
   /*** ABOUT */
 
+  .about .container-img {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    gap: 2rem;
+  }
+
   .about .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1572,6 +1568,7 @@ body {
   .about .wrapper {
     gap: 30px;
   }
+
 
   /*** FOOTER */
 
@@ -1642,13 +1639,13 @@ body {
   }
 
   .abs-img-1 {
-    top: 170px;
+    top: 130px;
     right: -30px;
     width: 260px;
   }
 
   .abs-img-2 {
-    bottom: 60px;
+    bottom: 20px;
     left: -80px;
     width: 360px;
   }
