--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,7 +593,7 @@ body {
 }
 
 .hero-banner .contact-img {
-  width: 100%;
+  width: 50vw;
   margin-bottom: 4rem;
 }
 
@@ -968,11 +968,12 @@ body {
 }
 
 .blog-card .card-content {
-  padding: 25px;
+  padding: 0;
 }
 
 .card-content .blog-title {
   color: var(--pink);
+  margin-top: 2rem;
 }
 
 .card-content h3 {
@@ -1193,16 +1194,29 @@ body {
   .navbar-link {
     margin-bottom: 3rem;
    }
+   .logo img {
+    width: auto;
+  }
+
   .hero-banner .contact-img {
     width: 90%;
     margin: 0 auto;
   }
+
   .hero-content iframe {
     width: 90%; 
   }
 
+  .hero-content .section-text {
+    font-size: 2rem;
+  }
+
+  .hero-content .hero-subtitle {
+    text-align: left;
+  }
+
   .hero .img {
-    width: 80%;
+    width: 80vw;
     margin: 0 auto;
   }
   .hero .section-text {
@@ -1213,16 +1227,40 @@ body {
   text-align: justify;  
   }
 
+
   .about .container-img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
   }
 
   .about .coach-avatar {
     width: 60px;
   }
 
+  .blog {
+    & h2 {
+    font-size: var(--fs-3);
+    }
+
+    & .card-content h3 {
+    text-align: left;
+    }
+    & .card-content .card-text {
+    font-size: var(--fs-4);
+    }
+  }
+  .video {
+    padding: 10px;
+    & h2 {
+    font-size: var(--fs-3);
+    }
+
+    & .section-text {
+    font-size: var(--fs-4);
+    }
+  }
  }
 @media (min-width: 575px) {
   /*** CUSTOM PROPERTY */
@@ -1260,7 +1298,7 @@ body {
   /*** HERO */
 
   .hero .img {
-    width: 60%;
+    width: 70vw;
     margin: 0 auto;
   }
 
@@ -1285,7 +1323,7 @@ body {
   }
 
   .hero-banner img {
-    width: 80%;
+    width: 80vw;
     margin: 0 auto;
   }
 
@@ -1507,6 +1545,10 @@ body {
     z-index: -1;
   }
 
+  .hero .hero-banner img {
+    width: 100%;
+  }
+
   .hero .img {
     width: 100%;
     margin: 0 auto;
@@ -1632,6 +1674,10 @@ body {
 
   .hero::after {
     width: 420px;
+  }
+
+  .hero .hero-banner {
+    width: 80%;
   }
 
   .hero .section-text {
