--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
 
   /*** spacing*/
 
-  --section-padding: 80px;
+  --section-padding: 50px;
 
   /*** shadow*/
 
@@ -204,8 +204,9 @@ body {
 }
 
 .h1 {
-  font-size: var(--fs-1);
+  font-size: var(--fs-2);
   font-weight: var(--fw-900);
+  
 }
 
 .container .h2 {
@@ -541,7 +542,11 @@ body {
   margin-block-end: 90px;
 }
 
-.hero-content h2, .hero-content h1 {
+.hero-content h1 {
+  color: var(--white);  
+}
+
+.hero-content h2 {
   color: var(--pink);
 }
 
@@ -585,11 +590,6 @@ body {
   margin: 4rem;
   margin: 0 auto;
   margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
-.hero-banner .contact-img {
-  width: 50vw;
   margin-bottom: 4rem;
 }
 
@@ -738,6 +738,7 @@ body {
   gap: 20px;
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
 }
 
 /*-----------------------------------*\
@@ -1019,6 +1020,7 @@ body {
 .footer {
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
+  margin-top: 80px;
 }
 
 .footer-top .container {
@@ -1188,18 +1190,44 @@ body {
  * responsive for larger than 575px screen
  */
  @media (min-width: 320px) {
+  :root {
+  --section-padding: 50px;
+}
+  .header {
+    padding-block: var(--section-padding);
+  }
+  .nav-open-btn {
+    padding: 10px;
+  }
+  .nav-open-btn .line {
+    width: 20px;
+    height: 2px;
+  }
   .navbar-link {
     margin-bottom: 3rem;
    }
+    
+   .logo {
+    font-size: 20px;
+   }
    .logo img {
-    width: auto;
+    width: 50px;
   }
-
+  .h1 {
+    font-size: var(--fs-2);
+  }
+  .hero-content .pink {
+    color: var(--pink);
+  }
   .hero-banner img {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
   }
-
+  .hero-banner .hero-subtitle {
+    font-size: 1.8rem;
+    text-align: left;
+    margin-top: 2rem;
+  }
   .hero-banner .contact-img {
     width: 90%;
     margin: 0 auto;
@@ -1214,6 +1242,7 @@ body {
   }
 
   .hero-content .hero-subtitle {
+    font-size: 1.8rem;
     text-align: left;
   }
 
@@ -1242,6 +1271,9 @@ body {
   }
 
   .blog {
+    & .card-content{
+      margin-top: 2rem;
+    }
   
     & h2 {
     font-size: var(--fs-3);
@@ -1249,6 +1281,7 @@ body {
 
     & .card-content h3 {
     text-align: left;
+
     }
     & .card-content .card-text {
     font-size: var(--fs-4);
@@ -1404,14 +1437,7 @@ body {
     width: 50%;
     margin: 0 auto;
   }
-
-  .hero-banner {
-    max-width: max-content;
-    margin-inline: auto;
-    & img {
-      width: 60%;
-    }
-  }
+  
 
   .hero .section-text {
   text-align: center;  
