--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -738,7 +738,7 @@ body {
   gap: 20px;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+ margin: 2rem;
 }
 
 /*-----------------------------------*\
